--- a/react-portfolio-2/src/data/projects.json
+++ b/react-portfolio-2/src/data/projects.json
@@ -1,13 +1,5 @@
 [
     {
-      "title": "PWA Text Editor",
-      "imageSrc": "Projects/TextEditor.png",
-      "description": "This projects is a PWA text editor. that utilizes Express.js, Node.js, IndexedDB, and Webpack.",
-      "skills": ["Express", "NodeJS", "Webpack", "IndexedDB", "Javascript", "HTML", "CSS"],
-      "demo": "https://jate-text-editor-g7v1.onrender.com/",
-      "source": "https://github.com/jmayfield777/Progressive-Web-Applications-PWA-Challenge-Text-Editor"
-    },
-    {
       "title": "Brewery Search Web App",
       "imageSrc": "Projects/BreweryFinder.png",
       "description": "This application is a brewery finder.",
@@ -16,31 +8,27 @@
       "source": "https://github.com/gpayabyab/Project-1"
     },
     {
-      "title": "Note Taking App",
-      "imageSrc": "Projects/NoteTakingApp.png",
-      "description": "This app allows the user to take notes on the webpage.",
-      "skills": ["Express", "Javascript"],
-      "source": "https://github.com/jmayfield777/Note-Taking-App-with-Express.js"
+      "title": "Get Fit",
+      "imageSrc": "Projects/GetFit.png",
+      "description": "This MERN application is a fitness/exercise tracker.",
+      "skills": ["Javascript", "HTML", "CSS", "MongoDB", "MongooseODM", "Express.js", "Node.js", "React", "Graphql"],
+      "demo": "https://get-fit-u7eu.onrender.com/",
+      "source": "https://github.com/yaserhdev/get-fit"
     },
     {
-      "title": "README Generator",
-      "imageSrc": "Projects/ReadmeGenerator.png",
-      "description": "This is a node app that generates README.md files for the user",
-      "skills": ["NodeJS", "Javascript"],
-      "source": "https://github.com/jmayfield777/Node.joshLinks to an external site."
+      "title": "Book Search Engine",
+      "imageSrc": "Projects/BookSearchEngine.png",
+      "description": "This MERN application is a book search engine.",
+      "skills": ["Javascript", "HTML", "CSS", "React", "MongooseODM", "Express.js", "Apollo Server/Client", "Bootstrap"],
+      "demo": "https://mern-challenge-book-search-engine-9ac8.onrender.com/",
+      "source": "https://github.com/jmayfield777/MERN-Challenge-Book-Search-Engine"
     },
     {
-      "title": "Workday Scheduler",
-      "imageSrc": "Projects/WorkDayScheduler.png",
-      "description": "This is a web app that serves as a digital day planner for the user",
-      "skills": ["localStorage", "Javascript", "HTML", "CSS"],
-      "source": "https://github.com/jmayfield777/Josh-s-Work-Schedule- to an external site."
-    },
-    {
-      "title": "Password Generator",
-      "imageSrc": "Projects/PasswordGenerator.png",
-      "description": "This is a web app that serves as a password generator for the user",
-      "skills": ["HTML", "CSS", "Javascript"],
-      "source": "https://github.com/jmayfield777/Password-Generation-StationLinks to an external site. to an external site."
+      "title": "PWA Text Editor",
+      "imageSrc": "Projects/TextEditor.png",
+      "description": "This project is a PWA text editor.",
+      "skills": ["Express.js", "Node.js", "Webpack", "IndexedDB", "Javascript", "HTML", "CSS"],
+      "demo": "https://jate-text-editor-g7v1.onrender.com/",
+      "source": "https://github.com/jmayfield777/Progressive-Web-Applications-PWA-Challenge-Text-Editor"
     }
   ]
